2011-12-10  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gperror.c, gpasm/gperror.h:
    fixed bug #3153394: PIC18 - relative branch - revision v595:
    added warnig for odd traget address;
    code generated for odd target address is now equal to the code 
    generated by MPASM

2011-12-08  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c: corrected coff_type for __16CR54C

2011-12-04  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gpasm.h, gplink/gplink.h, gputils/gpdasm.h, gputils/gplib.h,
    gputils/gpstrip.h, gputils/gpvc.h, gputils/gpvo.h:
    added build date to --version
  * gplink/lst.c, libgputils/gpdis.c, libgputils/gpdis.h, libgputils/gpmemory.c,
    libgputils/gpmemory.h:
    fixed bug #3437346: Information missing from list file

2011-11-21  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, libgputils/gpopcode.c, libgputils/gpopcode.h,
    libgputils/gpdis.c:
    fixed bug #3440413: gpasm fails to build gpsim test cases

2011-11-20  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c: fixed bug #3437346: Information missing from list file
  * include/stdhdr.h: updated GPUTILS_COPYRIGHT_STRING

2011-11-18  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpcofflink.c:
    fixed first part of bug #3439778: gplink fails to allocate sections

2011-11-12  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c, libgputils/gpdis.c: fixed compilation warnings
  * libgputils/gpcofflink.c: fixed bug #3435767: gplink segfaults

2011-11-12  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c, doc/gputils.lyx:
    added support for pic 14 bit enhanced devices supported by mpasmx 5.42,
    thanks to Gal Zsolt.
  * libgputils/gpprocessor.c, header/p12f683.inc, lkr/12f683_g.lkr,
    lkr/Makefile.am, lkr/Makefile.in:
    fixed bug #2822266: TMR1GE bit missing for T1CON on 12f683