@@ -4,6 +4,9 @@
     added warnig for odd traget address;
     code generated for odd target address is now equal to the code 
     generated by MPASM
+  * gpasm/gpasm.h, libgputils/gpcoff.h, gputils/gpvo.c:
+    fixed bug #3310962: gpasm extended mode -- MPLAB message:
+    added F_EXTENDED18 COFF flag if 18xx extended mode enabled
 
 2011-12-08  Borut Razem  <borutr@users.sourceforge.net>
   * libgputils/gpprocessor.c: corrected coff_type for __16CR54C
